Prevent title from wrapping

--- a/src/css/components/Title.styl
+++ b/src/css/components/Title.styl
@@ -7,3 +7,4 @@
   text-transform uppercase
   text-align right
   padding 0 0.5rem
+  white-space nowrap
